# Aca2018

./: .gitignore  CMakeLists.txt  README.md
resources/: get_alexnet.sh  rename.sh
resources/logs/: XeonVGGlog.csv  XeonVGGlog.xlsx
resources/logs/20conv_30bs/: Celeron_20conv_30bs.csv  Celeron_20conv_30bs.xlsx  Xeon_20conv_30bs.csv  Xeon_20conv_30bs.xlsx  i7_20conv_30bs.csv  i7_20conv_30bs.xlsx
resources/logs/3d_bench/: Xeon_3d_bench.csv
resources/logs/3d_bench/fp32/: b_mem.csv  inf_time.csv  inf_time.xlsx  setup_time.csv  w_mem.csv
resources/logs/3d_bench/int8/: b_mem.csv  inf_time.csv  inf_time.xlsx  setup_time.csv  w_mem.csv
resources/logs/conv_channels/: conv_channels.csv  conv_channels_2.csv  fp32_inf_time.csv  fp32_inf_time.xlsx  int8_inf_time.csv  int8_inf_time.xlsx
scripts/: build_hdf5.sh  build_images.py  filter.py  plot.py  process_3d_bench.py  test_vgg.py  vgg16.py
source/: from_intel_example.cpp  intel_int8_example.cpp  main.cpp  measurements.cpp  measurements.h
source/io/: DataSetIO.cpp  DataSetIO.h  h5io.cpp  h5io.h
source/logging/: logging.cpp  logging.h
source/mem_management/: mem_base.cpp  mem_base.h  mem_management.cpp  mem_management.h
source/monitoring/: cpu_monitoring.cpp  cpu_monitoring.h  mem_monitoring.cpp  mem_monitoring.h
source/neural_network/: AbsNet.cpp  AbsNet.h  FPNetwork.cpp  FPNetwork.h  INTNetwork.cpp  INTNetwork.h
source/tests/: test_mkl_dnn.cpp
tests/: FPNetTest.cpp  IOtest.cpp
